--- a/product.html
+++ b/product.html
@@ -19,7 +19,7 @@
             <h1><span class="de">DE</span>NUDE</h1>
 
             <ul>
-                <li><a href="categories.html">BRANDS</a></li>
+                <li><a href="index.html">BRANDS</a></li>
                 <li>SEASONS</li>
                 <li>MOODS</li>
             </ul>
