--- a/productList.html
+++ b/productList.html
@@ -20,7 +20,7 @@
             <h1><span class="de">DE</span>NUDE</h1>
 
             <ul class="nav-ul">
-                <li><a href="categories.html">BRANDS</a></li>
+                <li><a href="index.html">BRANDS</a></li>
                 <li>SEASONS</li>
                 <li>MOODS</li>
             </ul>
